# test-pythonanywhere-001

./: pyproject.toml
a_apis/: apps.py  urls.py  views.py
mysite/: settings.py  urls.py
